# getting-started-with-ai-foundry-agents

./: .env.example  Makefile  agent_example_00.py  agent_example_01.py  agent_example_02.py  agent_example_03.py  agent_example_04.py  agent_example_05.py  agent_example_06.py  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
