[project]
name = "getting-started-with-ai-foundry-agents"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.25.0",
    "azure-ai-agents>=1.1.0",
    "semantic-kernel>=1.30.0",
    "pyright>=1.1.400",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
]

[tool.pyright]
typeCheckingMode = "strict"
deprecateTypingAliases = true
reportDeprecated = "error"
